packages/svelte/tests/validator/samples/logic-block-in-attribute/input.svelte
<div style="{#if condition}a{/if}"></div>
