packages/svelte/tests/compiler-errors/samples/const-tag-cyclical/main.svelte
{#if true}
	{@const a = b}
	{@const b = a}
	<h1>hello {a}</h1>
{/if}
